--- a/Programmania/wwwroot/css/Courses.css
+++ b/Programmania/wwwroot/css/Courses.css
@@ -83,16 +83,16 @@ body {
     height: 155px;
 }
 
-.header-text h3 {
-    color: white;
-    text-shadow: rgb(255 255 255 / 60%) 1px 1px 1px, rgb(0 0 0 / 60%) -1px -1px 1px;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 155px;
-    font-size: 5vh;
-    font-family: montserrat, sans-serif;
-    font-weight: 700;
-}
+    .header-text h3 {
+        color: white;
+        text-shadow: rgb(255 255 255 / 60%) 1px 1px 1px, rgb(0 0 0 / 60%) -1px -1px 1px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 155px;
+        font-size: 5vh;
+        font-family: montserrat, sans-serif;
+        font-weight: 700;
+    }
 
 .content {
     padding: 0 10%;
@@ -108,7 +108,7 @@ body {
     -webkit-display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
-    align-items: center; 
+    align-items: center;
 }
 
 /*.courses::after{
@@ -127,6 +127,11 @@ body {
     box-sizing: border-box;
 }
 
+    .course:hover {
+        background-color: #f7f7f7;
+        transform: scale(1.1);
+    }
+
 .course_selected {
     background-color: rgb(182, 174, 174);
 }
@@ -141,15 +146,14 @@ body {
     border-top-right-radius: 20px;
 }
 
-.course__image:before,
-.course__image:after {
-    content: "";
-    position: absolute;
-    z-index: -2;
-}
+    .course__image:before,
+    .course__image:after {
+        content: "";
+        position: absolute;
+        z-index: -2;
+    }
 
     .course__image img {
-
         width: 100%;
         height: 100%;
         border-top-left-radius: 20px;
@@ -185,17 +189,17 @@ body {
     margin: auto;
 }
 
-.ldBar path.mainline {
-    stroke-width: 8;
-    stroke: #66a8ff;
-    stroke-linecap: round;
-}
+    .ldBar path.mainline {
+        stroke-width: 8;
+        stroke: #66a8ff;
+        stroke-linecap: round;
+    }
 
-.ldBar path.baseline {
-    stroke-width: 5;
-    stroke: #d6d6d6;
-    stroke-linecap: round;
-}
+    .ldBar path.baseline {
+        stroke-width: 5;
+        stroke: #d6d6d6;
+        stroke-linecap: round;
+    }
 
 .ldBar-label {
     font-size: 3vh;
@@ -204,7 +208,7 @@ body {
 }
 
 
-.lifted {
+/*.lifted {
     -moz-border-radius: 4px;
     border-radius: 4px;
 }
@@ -235,7 +239,7 @@ body {
     -ms-transform: rotate(5deg);
     -o-transform: rotate(5deg);
     transform: rotate(5deg);
-}
+}*/
 
 @media(max-width: 1040px) {
     .courses {
