Change Courses part in Main page

--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <header>
         <div class="header-text">
             <h3>PROGRAMMANIA</h3>
@@ -48,7 +49,8 @@
         </div>
     </header>
 
-    <main>
+
+        <main class="main">
         <div class="courses">
             <h3 class="course__header">Our courses</h3>
             <a name="courses"></a>
@@ -203,10 +205,12 @@
                 </form>
             </div>
         </div>
-    </main>
 
-    <footer>
-        <div class="footer">
+        
+    </main>
+    </div>
+
+    <footer class="footer">
             <div class="footer-links" data-aos="zoom-in" data-aos-duration="700">
                 <a href="#" class="footer-links_first">
                     <div class="footer-link__image">
@@ -230,8 +234,9 @@
             <div class="footer__text" data-aos="zoom-in" data-aos-duration="700">
                 <h5>&#x24B8; 2021 Programmania. All rights reserved.</h5>
             </div>
-        </div>
     </footer>
+
+    
     <script type="application/javascript" src="~/js/util/camelize.js"></script>
     <script type="application/javascript" src="~/js/index.js"></script>
     <script type="application/javascript" src="~/js/util/slider.js"></script>
