--- a/Programmania/wwwroot/css/Disciplines.css
+++ b/Programmania/wwwroot/css/Disciplines.css
@@ -73,9 +73,10 @@ body {
     height: auto;
     border: 1px solid #66a8ff;
     border-radius: 20px;
-    margin-top: 10px;
-    margin-left: 1vw;
+    margin-top: 30px;
+    margin-left: 30px;
     box-sizing: border-box;
+    box-shadow: 0px 8px 24px 4px rgba(174, 174, 192, 0.3), 0px 4px 12px 2px rgba(174, 174, 192, 0.3) !important;
 }
 
     .discipline:hover {
@@ -122,16 +123,16 @@ body {
 }
 
 .discipline__title {
+    font-family: monsterrat-bold;
     text-align: center;
-    font-size: 3vh;
-    font-family: "monsterrat-bold";
+    font-size: 1.8em;
     margin-top: 10px;
 }
 
 .discipline__info {
     text-align: center;
-    font-size: 2.5vh;
-    font-family: "monsterrat-light";
+    font-size: 1.5em;
+    font-family: monsterrat-light;
 }
 
 .discipline__percent {
@@ -264,10 +265,12 @@ body {
     }
 
 .ldBar-label {
-    font-size: 3vh;
+    font-family: monsterrat-normal;
+    font-size: 2em;
     color: #66a8ff;
-    text-align: center
+    text-align: center;
 }
+
 
 @media(max-width: 935px) {
     .desciplines {
